family planning updates

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,6 +20,9 @@
     border: 0 !important;
     box-shadow: none !important;
   }
+  .print-adjust-margin {
+    margin-top: 80px !important;
+  }
 }
 /* width */
 ::-webkit-scrollbar {
