--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --print-size: 8.27in 11.69in; /* Default to A4 */
+  --print-margin: 1cm;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -13,7 +18,7 @@
 }
 @media print {
   @page {
-    size: 8.5in 11in;
+    /* size: 8.5in 11in; */
     margin: 1cm;
   }
   .report-card {
